test/error/LexLiteralFloatInvalid.ci
public static class Test
{
	public static bool Run()
	{
		double a = 1.2.3; //ERROR: Expected identifier, got integer constant
		return true;
	}
}
